--- a/subdub/package.json
+++ b/subdub/package.json
@@ -21,11 +21,13 @@
     "mongodb": "^6.13.0",
     "mongoose": "^8.10.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
     "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.13.4",
     "eslint": "^9.20.1",
     "globals": "^15.15.0",
