--- a/subdub/package.json
+++ b/subdub/package.json
@@ -11,12 +11,12 @@
     "@arcjet/node": "^1.0.0-beta.2",
     "@upstash/workflow": "^0.2.9",
     "bcryptjs": "^3.0.2",
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "debug": "~2.6.9",
     "dotenv": "^16.4.7",
-    "express": "~4.16.1",
+    "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.0",
     "mongoose": "^8.10.1",
