--- a/subscribe/package.json
+++ b/subscribe/package.json
@@ -24,6 +24,7 @@
     "date-fns": "2.29.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.477.0",
+    "motion": "^12.6.5",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
