--- a/subdub/package.json
+++ b/subdub/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@arcjet/node": "^1.0.0-beta.2",
     "@upstash/workflow": "^0.2.9",
+    "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -17,6 +18,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "googleapis": "^148.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.0",
     "mongoose": "^8.10.1",
