--- a/subdub/package.json
+++ b/subdub/package.json
@@ -13,18 +13,22 @@
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
+    "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "debug": "~2.6.9",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "googleapis": "^148.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.0",
     "mongoose": "^8.10.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.2",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
