--- a/subdub/package.json
+++ b/subdub/package.json
@@ -29,7 +29,8 @@
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "passport-twitter": "^1.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
